syntax = "proto3";

package v1.observability;

option go_package = "github.com/accuknox/knoxAutoPolicy/protos/v1/observability";

service Observability {
    rpc SysObservabilityData (Data) returns (Response);
}

message Data {
    string request = 1;
    string clusterName = 2;
    string namespace = 3;
    string containerName =4;
    string labels = 5;
    string fromSource = 6;
    string duration = 7;
}

message SysObsResponseData {
    string ClusterName = 1;
    string NameSpace = 2;
    string Labels = 3;
    string ContainerName = 4;
    repeated SysProcessFileData Resources = 5;
}

message SysProcessFileData {
    string fromSource = 1;
    repeated string processPaths = 2;
    repeated string filePaths = 3;
    repeated string networkPaths = 4;
}

message Response {
    repeated SysObsResponseData Data = 1;
}